// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Shell > matches snapshot in default and collapsed states > collapsed 1`] = `
<div>
  <div
    class="shell sidebar-collapsed"
  >
    <aside
      class="sidebar"
    >
      <div
        class="sb-traffic"
      >
        <div
          aria-hidden="true"
          class="dots"
        >
          <span
            class="r"
          />
          <span
            class="y"
          />
          <span
            class="g"
          />
        </div>
        <span
          aria-label="Toggle sidebar"
          class="sb-toggle"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="15"
            viewBox="0 0 16 16"
            width="15"
          >
            <rect
              height="10"
              rx="2.2"
              stroke="currentColor"
              stroke-width="1.3"
              width="12"
              x="2"
              y="3"
            />
            <line
              stroke="currentColor"
              stroke-width="1.3"
              x1="6.4"
              x2="6.4"
              y1="3.4"
              y2="12.6"
            />
          </svg>
        </span>
        <div
          class="nav-arrows"
        >
          <span
            aria-disabled="false"
            aria-label="Back"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="14"
              viewBox="0 0 8 14"
              width="8"
            >
              <path
                d="M6.5 1.5 1.5 7l5 5.5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.6"
              />
            </svg>
          </span>
          <span
            aria-disabled="false"
            aria-label="Forward"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="14"
              viewBox="0 0 8 14"
              width="8"
            >
              <path
                d="M1.5 1.5 6.5 7l-5 5.5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.6"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="sb-toggle-row"
      >
        <button
          aria-label="Expand sidebar"
          class="toggle-btn"
          type="button"
        >
          ◧
        </button>
      </div>
      <div
        class="sb-nav"
      >
        <button
          class="sb-nav-item active"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ⌂
          </span>
          <span>
            Home
          </span>
        </button>
        <button
          class="sb-nav-item"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ▤
          </span>
          <span>
            My work
          </span>
        </button>
        <button
          class="sb-nav-item"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ⚙
          </span>
          <span>
            Automations
          </span>
        </button>
      </div>
      <div
        class="sb-section"
      >
        <div
          class="sb-section-h"
        >
          <span
            class="nm"
          >
            Threads
          </span>
          <span
            class="actions"
          >
            <span
              aria-label="Filter threads"
              role="button"
              tabindex="0"
            >
              ⛚
            </span>
            <span
              aria-label="New thread"
              role="button"
              tabindex="0"
            >
              +
            </span>
          </span>
        </div>
        <div
          class="session-list"
        >
          <button
            class="session-item active"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ic"
            >
              ▾
            </span>
            <span
              class="label"
            >
              Backend cleanup review
            </span>
          </button>
          <div
            class="session-children"
          >
            <button
              class="session-item nested current"
              type="button"
            >
              <span
                aria-hidden="true"
                class="ic"
              >
                ▾
              </span>
              <span
                class="label"
              >
                #142 · Add cost-meter card
              </span>
            </button>
            <div
              class="session-children"
              style="padding-left: 22px;"
            >
              <button
                class="session-item nested"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="ic"
                >
                  📋
                </span>
                <span
                  class="label"
                >
                  Plan
                </span>
                <span
                  aria-hidden="true"
                  class="v3-dot v3-dot--done"
                />
              </button>
              <button
                class="session-item nested current"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="ic"
                >
                  🛠
                </span>
                <span
                  class="label"
                >
                  Dev
                </span>
                <span
                  aria-hidden="true"
                  class="v3-dot v3-dot--active"
                />
              </button>
              <button
                class="session-item nested future"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="ic"
                >
                  🧹
                </span>
                <span
                  class="label"
                >
                  Cleanup
                </span>
                <span
                  aria-hidden="true"
                  class="v3-dot v3-dot--future"
                />
              </button>
            </div>
          </div>
          <button
            class="session-item"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ic"
            >
              ⎇
            </span>
            <span
              class="label"
            >
              Latest issues
            </span>
          </button>
        </div>
      </div>
      <div
        class="closed-folder"
      >
        <button
          aria-expanded="false"
          class="folder-row"
          type="button"
        >
          <span
            aria-hidden="true"
            class="chev"
          >
            ▸
          </span>
          <span
            aria-hidden="true"
            class="ic"
          >
            📁
          </span>
          <span>
            Closed
          </span>
          <span
            class="count"
          >
            14
          </span>
        </button>
      </div>
      <div
        class="sb-footer"
      >
        <span
          aria-hidden="false"
          aria-label="chenjian2664"
          class="v3-avatar v3-avatar--amber"
          role="img"
          style="width: 26px; height: 26px; font-size: 11px;"
        >
          CJ
        </span>
        <span
          class="name"
        >
          chenjian2664
        </span>
        <span
          class="actions"
        >
          <span
            aria-label="Messages"
            role="button"
            tabindex="0"
          >
            💬
          </span>
          <span
            aria-label="Settings"
            role="button"
            tabindex="0"
          >
            ⚙
          </span>
        </span>
      </div>
    </aside>
    <div
      class="main"
    >
      <div
        class="topbar"
      >
        <button
          class="btn"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ▶
          </span>
          Run
        </button>
      </div>
      <div
        class="body"
      />
    </div>
  </div>
</div>
`;

exports[`Shell > matches snapshot in default and collapsed states > default 1`] = `
<div>
  <div
    class="shell"
    style="grid-template-columns: 232px minmax(0, 1fr);"
  >
    <aside
      class="sidebar"
    >
      <div
        class="sb-traffic"
      >
        <div
          aria-hidden="true"
          class="dots"
        >
          <span
            class="r"
          />
          <span
            class="y"
          />
          <span
            class="g"
          />
        </div>
        <span
          aria-label="Toggle sidebar"
          class="sb-toggle"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="15"
            viewBox="0 0 16 16"
            width="15"
          >
            <rect
              height="10"
              rx="2.2"
              stroke="currentColor"
              stroke-width="1.3"
              width="12"
              x="2"
              y="3"
            />
            <line
              stroke="currentColor"
              stroke-width="1.3"
              x1="6.4"
              x2="6.4"
              y1="3.4"
              y2="12.6"
            />
          </svg>
        </span>
        <div
          class="nav-arrows"
        >
          <span
            aria-disabled="false"
            aria-label="Back"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="14"
              viewBox="0 0 8 14"
              width="8"
            >
              <path
                d="M6.5 1.5 1.5 7l5 5.5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.6"
              />
            </svg>
          </span>
          <span
            aria-disabled="false"
            aria-label="Forward"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="14"
              viewBox="0 0 8 14"
              width="8"
            >
              <path
                d="M1.5 1.5 6.5 7l-5 5.5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.6"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="sb-toggle-row"
      >
        <button
          aria-label="Expand sidebar"
          class="toggle-btn"
          type="button"
        >
          ◧
        </button>
      </div>
      <div
        class="sb-nav"
      >
        <button
          class="sb-nav-item active"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ⌂
          </span>
          <span>
            Home
          </span>
        </button>
        <button
          class="sb-nav-item"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ▤
          </span>
          <span>
            My work
          </span>
        </button>
        <button
          class="sb-nav-item"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ⚙
          </span>
          <span>
            Automations
          </span>
        </button>
      </div>
      <div
        class="sb-section"
      >
        <div
          class="sb-section-h"
        >
          <span
            class="nm"
          >
            Threads
          </span>
          <span
            class="actions"
          >
            <span
              aria-label="Filter threads"
              role="button"
              tabindex="0"
            >
              ⛚
            </span>
            <span
              aria-label="New thread"
              role="button"
              tabindex="0"
            >
              +
            </span>
          </span>
        </div>
        <div
          class="session-list"
        >
          <button
            class="session-item active"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ic"
            >
              ▾
            </span>
            <span
              class="label"
            >
              Backend cleanup review
            </span>
          </button>
          <div
            class="session-children"
          >
            <button
              class="session-item nested current"
              type="button"
            >
              <span
                aria-hidden="true"
                class="ic"
              >
                ▾
              </span>
              <span
                class="label"
              >
                #142 · Add cost-meter card
              </span>
            </button>
            <div
              class="session-children"
              style="padding-left: 22px;"
            >
              <button
                class="session-item nested"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="ic"
                >
                  📋
                </span>
                <span
                  class="label"
                >
                  Plan
                </span>
                <span
                  aria-hidden="true"
                  class="v3-dot v3-dot--done"
                />
              </button>
              <button
                class="session-item nested current"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="ic"
                >
                  🛠
                </span>
                <span
                  class="label"
                >
                  Dev
                </span>
                <span
                  aria-hidden="true"
                  class="v3-dot v3-dot--active"
                />
              </button>
              <button
                class="session-item nested future"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="ic"
                >
                  🧹
                </span>
                <span
                  class="label"
                >
                  Cleanup
                </span>
                <span
                  aria-hidden="true"
                  class="v3-dot v3-dot--future"
                />
              </button>
            </div>
          </div>
          <button
            class="session-item"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ic"
            >
              ⎇
            </span>
            <span
              class="label"
            >
              Latest issues
            </span>
          </button>
        </div>
      </div>
      <div
        class="closed-folder"
      >
        <button
          aria-expanded="false"
          class="folder-row"
          type="button"
        >
          <span
            aria-hidden="true"
            class="chev"
          >
            ▸
          </span>
          <span
            aria-hidden="true"
            class="ic"
          >
            📁
          </span>
          <span>
            Closed
          </span>
          <span
            class="count"
          >
            14
          </span>
        </button>
      </div>
      <div
        class="sb-footer"
      >
        <span
          aria-hidden="false"
          aria-label="chenjian2664"
          class="v3-avatar v3-avatar--amber"
          role="img"
          style="width: 26px; height: 26px; font-size: 11px;"
        >
          CJ
        </span>
        <span
          class="name"
        >
          chenjian2664
        </span>
        <span
          class="actions"
        >
          <span
            aria-label="Messages"
            role="button"
            tabindex="0"
          >
            💬
          </span>
          <span
            aria-label="Settings"
            role="button"
            tabindex="0"
          >
            ⚙
          </span>
        </span>
      </div>
    </aside>
    <div
      class="main"
    >
      <div
        class="topbar"
      >
        <button
          class="btn"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ic"
          >
            ▶
          </span>
          Run
        </button>
      </div>
      <div
        class="body"
      />
    </div>
    <div
      aria-label="Resize the sidebar"
      aria-orientation="vertical"
      class="resize-handle sidebar-resize"
      role="separator"
      style="left: 230px;"
    />
  </div>
</div>
`;
